--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,6 +53,8 @@ container_scan:
     - |
         if [ "${ANCHORE_FAIL_ON_POLICY}" == "true" ]; then
           anchore-cli evaluate check ${IMAGE_NAME}
+        else
+          anchore-cli evaluate check ${IMAGE_NAME} | tee /dev/null
         fi
 
   artifacts:
