fix dependencies syntax
Signed-off-by: Brady Todhunter <brady.todhunter@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,8 @@ container_scan:
 anchore_reports:
   stage: publish
   image: alpine:latest
-  dependencies: container_scan
+  dependencies:
+    - container_scan
 
   variables:
     GIT_STRATEGY: none
