--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,7 +75,7 @@ anchore_reports:
     - |
         echo "Parsing anchore reports."
         printf "\n%s\n" "The following OS packages are installed on ${IMAGE_NAME}:"
-        jq '.content[] | .package' image-content-os-report.json | sort || true
+        jq '[.content | sort_by(.package) | .[] | {package: .package, version: .version}]' image-content-os-report.json || true
         printf "\n%s\n" "The following vulnerabilites were found on ${IMAGE_NAME}:"
         jq '[.vulnerabilities | group_by(.package) | .[] | {package: .[0].package, vuln: [.[].vuln]}]' image-vuln-report.json || true
 
