re-set -o pipefail after evaluate check
Signed-off-by: Brady Todhunter <brady.todhunter@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,6 +49,7 @@ container_scan:
         else
           set +o pipefail
           anchore-cli evaluate check "$IMAGE_NAME" | tee /dev/null
+          set -o pipefail
         fi
 
   artifacts:
