--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,9 +47,7 @@ container_scan:
         if [ "$ANCHORE_FAIL_ON_POLICY" == "true" ]; then
           anchore-cli evaluate check "$IMAGE_NAME"
         else
-          set +o pipefail
-          anchore-cli evaluate check "$IMAGE_NAME" | tee /dev/null
-          set -o pipefail
+          (set +o pipefail; anchore-cli evaluate check "$IMAGE_NAME" | tee /dev/null)
         fi
 
   artifacts:
