fix reports dependency name
Signed-off-by: Brady Todhunter <brady.todhunter@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ anchore_reports:
   stage: publish
   image: alpine:latest
   dependencies:
-  - container_scan
+  - stateless_scan_script
 
   variables:
     GIT_STRATEGY: none
