--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,6 @@ variables:
 
 stages:
 - build
-- scan
 - publish
 
 container_build:
@@ -19,19 +18,9 @@ container_build:
   - echo "$CI_JOB_TOKEN" | docker login -u gitlab-ci-token --password-stdin "${CI_REGISTRY}"
   - docker pull "${CI_REGISTRY_IMAGE}:${CI_COMMIT_REF_SLUG}" || true
   - docker build --cache-from "${CI_REGISTRY_IMAGE}:${CI_COMMIT_REF_SLUG}" -t "$IMAGE_NAME" .
-  - docker push "$IMAGE_NAME"
-
-stateless_scan_script:
-  stage: scan
-  image: docker:stable
-  services:
-  - docker:stable-dind
-  
-  script:
-  - echo "$CI_JOB_TOKEN" | docker login -u gitlab-ci-token --password-stdin "${CI_REGISTRY}"
-  - docker pull "$IMAGE_NAME"
   - apk add curl bash
   - curl -s https://raw.githubusercontent.com/anchore/ci-tools/stateless_ci_container/scripts/inline_scan | bash -s -- -r "$IMAGE_NAME"
+  - docker push "$IMAGE_NAME"
 
   artifacts:
     name: ${CI_JOB_NAME}-${CI_COMMIT_REF_NAME}
@@ -42,7 +31,7 @@ anchore_reports:
   stage: publish
   image: alpine:latest
   dependencies:
-  - stateless_scan_script
+  - container_build
 
   variables:
     GIT_STRATEGY: none
