--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ variables:
 
 stages:
 - build
+- scan
 - publish
 
 container_build:
@@ -19,21 +20,23 @@ container_build:
   - echo "$CI_JOB_TOKEN" | docker login -u gitlab-ci-token --password-stdin "${CI_REGISTRY}"
   - docker pull "${CI_REGISTRY_IMAGE}:${CI_COMMIT_REF_SLUG}" || true
   - docker build --cache-from "${CI_REGISTRY_IMAGE}:${CI_COMMIT_REF_SLUG}" -t "$IMAGE_NAME" .
-  - mkdir -p "$SHARE_PATH"
-  - docker save "$IMAGE_NAME" -o "${SHARE_PATH}/image.tar"
-  - docker run -v ${SHARE_PATH}:/anchore-engine docker.io/anchore/inline-scan:dev
   - docker push "$IMAGE_NAME"
 
-  artifacts:
-    name: ${CI_JOB_NAME}-${CI_COMMIT_REF_NAME}
-    paths:
-    - anchore-reports/*
+container_scan:
+  stage: scan
+  image: docker.io/anchore/inline-scan:dev
+  
+  script:
+  - nohup /docker-entrypoint.sh start & &> /var/log/anchore.log
+  - anchore-cli system wait
+  - anchore-cli image add "$IMAGE_NAME"
+  - anchore-cli image wait "$IMAGE_NAME"
 
 anchore_reports:
   stage: publish
   image: alpine:latest
   dependencies:
-  - container_build
+  - container_scan
 
   variables:
     GIT_STRATEGY: none
