--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,10 +27,10 @@ container_scan:
   image: docker.io/anchore/inline-scan:dev
   
   script:
-  - nohup /docker-entrypoint.sh start & &> /var/log/anchore.log
-  - anchore-cli system wait
+  - nohup /docker-entrypoint.sh start &> /var/log/anchore.log &
+  - anchore_ci_tools.py --wait
   - anchore-cli image add "$IMAGE_NAME"
-  - anchore-cli image wait "$IMAGE_NAME"
+  - anchore_ci_tools.py --wait --image "$IMAGE_NAME"
 
 anchore_reports:
   stage: publish
