--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 variables:
   IMAGE_NAME: ${CI_REGISTRY_IMAGE}/build:${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHA}
-  SHARE_PATH: /builds/${CI_PROJECT_PATH}/share
 
 stages:
 - build
@@ -9,7 +8,7 @@ stages:
 
 container_build:
   stage: build
-  image: docker:stable
+  image: docker:stable-git
   services:
   - docker:stable-dind
 
@@ -20,9 +19,16 @@ container_build:
   - echo "$CI_JOB_TOKEN" | docker login -u gitlab-ci-token --password-stdin "${CI_REGISTRY}"
   - docker pull "${CI_REGISTRY_IMAGE}:${CI_COMMIT_REF_SLUG}" || true
   - docker build --cache-from "${CI_REGISTRY_IMAGE}:${CI_COMMIT_REF_SLUG}" -t "$IMAGE_NAME" .
+  - apk add bash curl 
+  - curl -s "https://raw.githubusercontent.com/anchore/ci-tools/stateless_ci_container/scripts/inline_scan" | bash -s -- -r "$IMAGE_NAME"
   - docker push "$IMAGE_NAME"
 
-container_scan:
+  artifacts:
+    name: ${CI_JOB_NAME}-${CI_COMMIT_REF_NAME}
+    paths:
+    - anchore-reports/*
+
+container_scan_service:
   stage: scan
   variables:
     ANCHORE_CLI_URL: "http://anchore-engine:8228/v1"
@@ -38,16 +44,11 @@ container_scan:
   - anchore-cli image add "$IMAGE_NAME"
   - anchore-cli image wait "$IMAGE_NAME"
 
-  artifacts:
-    name: ${CI_JOB_NAME}-${CI_COMMIT_REF_NAME}
-    paths:
-    - anchore-reports/*
-
 anchore_reports:
   stage: publish
   image: alpine:latest
   dependencies:
-  - container_scan
+  - container_build
 
   variables:
     GIT_STRATEGY: none
