--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
     - image: docker:stable-git
     environment:
-      IMAGE_NAME: anchore-ci-demo
+      IMAGE_NAME: btodhunter/anchore-ci-demo
       IMAGE_TAG: latest
     steps:
     - checkout
