--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -3,7 +3,7 @@
   command: sh -c 'apk add bash curl &&
     mkdir -p /build && 
     cd /build &&
-    git clone https://github.com/Btodhunter/ci-demos.git &&
+    git clone https://github.com/Btodhunter/ci-demos.git . &&
     docker build -t "${IMAGE_NAME}:ci" . &&
     curl -s "https://raw.githubusercontent.com/anchore/ci-tools/stateless_ci_container/scripts/inline_scan" | bash -s -- -r "${IMAGE_NAME}:ci" &&
     echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin &&
