--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -2,6 +2,6 @@ dind:
   add_docker: true
   image: docker:stable-git
   environment:
-    IMAGE_NAME: btodhunter/anchore-codeship-demo
-    IMAGE_TAG: latest
+    IMAGE_NAME: btodhunter/anchore-ci-demo
+    IMAGE_TAG: codeship
   encrypted_env_file: env.encrypted
