--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     - image: docker:stable-git
     environment:
       IMAGE_NAME: btodhunter/anchore-ci-demo
-      IMAGE_TAG: latest
+      IMAGE_TAG: circleci
     steps:
     - checkout
     - setup_remote_docker
