--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ container_scan_service:
   stage: scan
   variables:
     ANCHORE_CLI_URL: "http://anchore-engine:8228/v1"
+    GIT_STRATEGY: none
   image: docker.io/anchore/engine-cli:latest
   services:
   - name: docker.io/anchore/inline-scan:dev
