set travis env var
Signed-off-by: Brady Todhunter <brady.todhunter@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
   - docker
 
 env:
-  - IMAGE_NAME=anchore-ci-demo
-  - IMAGE_TAG=travisci
+  - IMAGE_NAME="anchore-ci-demo"
+  - IMAGE_TAG="travisci"
 
 before_install:
   - docker build -t "${IMAGE_NAME}:ci" .
