--- a/codefresh.yml
+++ b/codefresh.yml
@@ -5,12 +5,19 @@ steps:
     type: build
     image_name: btodhunter/ci-demos
     working_directory: ./
-    tag: codefresh
     dockerfile: Dockerfile
 
+  anchore_scan:
+    title: Scanning Docker Image
+    image: docker:stable-git
+    description: Analyzing Image with Anchore Engine.
+    commands:
+      - apk add curl bash
+      - curl -s "https://raw.githubusercontent.com/anchore/ci-tools/stateless_ci_container/scripts/inline_scan" | bash -s -- -r ${{build_docker_image}}
+  
   push_to_registry:
     title: Pushing to Docker Registry 
     type: push
-    candidate: '${{build_image}}'
+    candidate: '${{build_docker_image}}'
     tag: codefresh
     registry: dockerhub
