--- a/codefresh.yml
+++ b/codefresh.yml
@@ -22,7 +22,9 @@ steps:
         image: anchore/inline-scan:latest
         links:
           - anchore-engine
-        command: anchore_ci_tools.py -a -r --image btodhunter/anchore-demo:ci
+        environment:
+          - ANCHORE_CLI_URL='http://anchore-engine:8228/v1/'
+        command: anchore_ci_tools.py --wait && anchore_ci_tools.py -a -r --image btodhunter/anchore-demo:ci
       
   push_to_registry:
     title: Pushing to Docker Registry 
