--- a/codefresh.yml
+++ b/codefresh.yml
@@ -24,7 +24,7 @@ steps:
           - anchore-engine
         environment:
           - ANCHORE_CLI_URL='http://anchore-engine:8228/v1/'
-        command: anchore_ci_tools.py --wait && anchore_ci_tools.py -a -r --image btodhunter/anchore-demo:ci
+        command: bash -c 'anchore_ci_tools.py --wait && anchore_ci_tools.py -a -r --image btodhunter/anchore-demo:ci'
       
   push_to_registry:
     title: Pushing to Docker Registry 
