--- a/codefresh.yml
+++ b/codefresh.yml
@@ -26,6 +26,10 @@ steps:
           - anchore-engine
         environment:
           - ANCHORE_CLI_URL=http://anchore-engine:8228/v1/
+          - IMAGE_NAME=${{IMAGE_NAME}}
+          - IMAGE_TAG=${{IMAGE_TAG}}
+          - DOCKER_USER=${{DOCKER_USER}}
+          - DOCKER_PASS=${{DOCKER_PASS}}
         command: bash -xc 'anchore-cli system wait && anchore-cli registry add r.cfcr.io $DOCKER_USER $DOCKER_PASS --skip-validate && anchore_ci_tools.py -a -r --image r.cfcr.io/btodhunter/${IMAGE_NAME}:ci'
       
   push_to_registry:
