--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -5,7 +5,7 @@
     cd /build &&
     git clone https://github.com/Btodhunter/ci-demos.git . &&
     docker build -t "${IMAGE_NAME}:ci" . &&
-    curl -s "https://raw.githubusercontent.com/anchore/ci-tools/master/scripts/inline_scan" | bash -s -- -r "${IMAGE_NAME}:ci" &&
+    curl -s "https://raw.githubusercontent.com/anchore/ci-tools/master/scripts/inline_scan" | bash -s -- -f -b ./.anchore_policy.json "${IMAGE_NAME}:ci" &&
     echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin &&
     docker tag "${IMAGE_NAME}:ci" "${IMAGE_NAME}:${IMAGE_TAG}" &&
     docker push "${IMAGE_NAME}:${IMAGE_TAG}"'
